Fix bugs: stale session NPEs, future date validation, cap race, blank search, Feb29 list sections, isFuture logic, channel post NPE, dead code cleanup